--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,9 @@ html * {
     margin: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
+
 
 body {
     display: flex;
@@ -38,7 +40,6 @@ body {
 header {
     position: fixed;
     z-index: 2;
-    padding: 30px 0px;
     height: 12vh;
     background-color: var(--blue);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.164);
@@ -58,6 +59,7 @@ header {
 
 a {
     text-decoration: none;
+    cursor: pointer;
 }
 
 
@@ -72,12 +74,6 @@ nav {
     color: white;
 }
 
-.nav_item_link, .nav_item_link:visited {
-    text-decoration: none;
-    color: white;
-}
-
-
 .nav_list {
     display: flex;
     gap: 35px;
@@ -85,6 +81,11 @@ nav {
     font-size: 1.1rem;
     font-weight: 500;
     outline: none;
+}
+
+.nav_item_link:visited, .nav_item_link {
+    text-decoration: none;
+    color: white;
 }
 
 /* menu button */
@@ -149,6 +150,7 @@ nav {
     border-radius: 100px;
     color: #253239;
     transition: ease .3s;
+    cursor: pointer;
 }
 
 .hide {
@@ -170,10 +172,7 @@ nav {
     }
 }
 
-
-
 /* homepage section */
-
 
 .homepage_section {
     color: #253239;
@@ -194,7 +193,7 @@ nav {
     transition: ease .5s;
 }
 
-.mobile_app_image:hover {
+.mobile_app_image:hover, .como_surgiu_image:hover {
     transform: scale(1.04);
     transition: ease .5s;
 }
@@ -232,7 +231,7 @@ nav {
     box-shadow: inset 0 0 1.6em -0.6em #36a8ff;
     overflow: hidden;
     position: relative;
-    height: 2.8em;
+    height: 3em;
     padding-right: 3.3em;
 }
   
@@ -243,7 +242,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 2.2em;
+    height: 2.4em;
     width: 2.2em;
     border-radius: 1.5em;
     box-shadow: 0.1em 0.1em 0.6em 0.2em #36a8ff;
@@ -275,6 +274,21 @@ nav {
     font-size: 2rem;
 }
 
+.button_text {
+    margin: 10px 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+.disponivel_text {
+    text-transform: uppercase;
+    font-size: 0.8rem;
+}
+
+.google_play_text {
+    font-size: 1rem;
+}
+
 /* about section */
 
 .about_section {
@@ -282,6 +296,425 @@ nav {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100vh;
-    background-color: var(--blue);
+    background-color: #e7f5ff;
+    color: #253239;
 }
+
+.about_section_container {
+    flex-direction: column;
+    padding: 120px 0px;
+}
+
+.section_title {
+    font-size: 2.5rem;
+    color:#36a8ff;
+    text-align: center;
+}
+
+#como_surgiu, #funcionalidades {
+    margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.section_subtitle_div {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.section_subtitle {
+    font-size: 1.8rem
+}
+
+.subtitle_icon {
+    width: 40px;
+}
+
+#info_div1{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 30px;
+}
+
+.como_surgiu_image {
+    width: 45%;
+    transition: 0.5s ease;
+}
+
+
+#info_div1 .text_paragraph {
+    width: 45%;
+    text-align: justify;
+    line-height: 40px;
+}
+
+#funcionalidades {
+    margin-top: 80px;
+}
+
+#cards_div {
+    width: 100%;
+    margin-top: 40px;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.card{
+    width: 250px;
+    height: 300px;
+    background-color: white;
+    border-radius: 35px;
+    padding: 20px;
+    transition: ease 0.5s;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0px 0px 10px #00000031;
+
+}
+
+.card:hover {
+    transform: scale(1.05);
+    transition: ease 0.5s;
+}
+
+.card_image {
+    width: 150px;
+    height: 150px;
+}
+
+.card_paragraph {
+    margin-top: 10px;
+    text-align: center;
+}
+
+/* achievements section */
+
+.achievements_section {
+    background-color: white;
+    width: 100vw;
+}
+
+.achievements_section_container, .developers_section_div {
+    padding: 120px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+}
+
+.developers_section {
+    background-color: white;
+    width: 100vw;
+}
+
+.developers_section_div .text_paragraph {
+    margin-top: 30px;
+    text-align: center;
+}
+
+
+
+.cards_developers_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.card_developer {
+    width: 300px;
+}
+
+.developer_image {
+    border-radius: 150px;
+    width: 300px;
+    height: 300px;
+    background-image: url('/assets/images/danielle.jpeg');
+    background-position: center;
+    background-size: cover;
+    border: 8px solid var(--blue);
+    box-shadow: inset 0px 0px 10px #0000009c,
+                0px 0px 10px #0000003d;
+
+}
+
+.person_photo {
+    object-fit: cover;
+    width: 200px;
+}
+
+.name {
+    color:#36a8ff;
+    font-weight: 700;
+    font-size: 1.6rem;
+    text-align: center;
+    margin: 10px 0px;
+}
+
+.about_person {
+    text-align: center;
+}
+
+/* footer */
+
+footer {
+    width: 100vw;
+    height: 35vh;
+    background-color: var(--blue);
+    padding: 50px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer_container {
+    height: 100%;
+    justify-content:space-between;
+}
+
+.left_footer_container,.right_footer_container {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 100%;
+    justify-content: center;
+    gap: 20px;
+}
+
+.right_footer_container {
+    align-items: center;
+}
+
+.footer_logo {
+    width: 200px;
+}
+
+.footer_text_1 {
+    font-size: 1.5rem;
+    color: white;
+    font-weight: 600;
+    text-shadow: 0px 0px 5px #0000004f;
+}
+
+.footer_text_2 {
+    font-size: 1.2rem;
+    color: white;
+    font-weight: 500;
+    text-shadow: 0px 0px 5px #0000004f;
+}
+
+.social {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+}
+
+.social_media {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 260px;
+    height: 40px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px #00000031;
+}
+
+.insta {
+    background-color: #DD2A7B;
+}
+
+.fa-instagram, .fa-pager, .fa-envelope {
+    margin-right: 10px;
+}
+
+.fa-instagram, .social_media {
+    color: white;
+    font-weight: 500;
+    transition: ease .6s;
+}
+
+.insta:hover {
+    background-color: white;
+    color: #DD2A7B;
+    box-shadow: inset 0px 0px 10px #00000031;
+}
+
+.insta:hover .fa-instagram {
+    color: #DD2A7B;
+}
+
+.website {
+    background-color: #5a70a0;
+}
+
+.website:hover {
+    background-color: white;
+    color: #5a70a0;
+    box-shadow: inset 0px 0px 10px #00000031;
+}
+
+.email {
+    background-color: rgb(255, 59, 59);
+    font-size: 0.7rem;
+}
+
+
+.email:hover {
+    background-color: white;
+    color: rgb(255, 59, 59);
+    box-shadow: inset 0px 0px 10px #00000031;
+    display: flex;
+    justify-content: center;
+}
+
+/* medias queries */
+
+@media screen and (max-width: 1020px) {
+    .info_container_title {
+        font-size: 2rem;
+    }
+    
+    .text_paragraph {
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 850px) {
+
+    .homepage_section {
+        height: auto;
+    }
+
+    .homepage_section_container {
+        flex-direction: column-reverse;
+        padding: 40px 0px;
+    }
+
+    .button_link {
+        display: flex;
+        justify-content: center;
+    }
+
+    .info_container {
+        width: 80vw;
+    }
+
+    .mobile_app_image {
+        width: 60vw;
+    }
+
+    .cssbuttons-io-button {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+
+    .info_container_title, .text_paragraph {
+        justify-content: center;
+        display: flex;
+        text-align: center;
+        width: 80vw;
+    }
+
+    .info_container_title {
+        font-size: 1.2em;
+    }
+    
+    .text_paragraph {
+        font-size: 1em;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .logo {
+        width: 120px;
+    }
+    
+    #info_div1 {
+        flex-direction: column;
+    }
+
+    #info_div1 .text_paragraph {
+        font-size: 1.2rem;
+        width: 100%;
+    }
+
+    .como_surgiu_image {
+        width: 100%;
+    }
+    
+    .cards_developers_container {
+        flex-wrap: wrap;
+    }
+
+}
+
+@media screen and (max-width: 725px) {
+    footer {
+        padding: 30px 0px;
+        height: auto;
+    }
+
+    footer .container {
+        flex-direction: column;
+        justify-content: center;
+        gap: 40px;
+    }
+
+    .footer_text_1 {
+        text-align: center;
+    }
+
+    .left_footer_container, .right_footer_container {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 660px) {
+    .footer_text_1 {
+        width: 100%;
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 400px) {
+
+    .section_title {
+        font-size: 2rem;
+    }
+
+    .section_subtitle {
+        font-size: 1.2rem;
+    }
+
+    #info_div1 .text_paragraph {
+        font-size: 1rem;
+    }
+
+    .text_paragraph {
+        font-size: 1rem;
+    }
+
+    .name {
+        font-size: 1.4rem;
+    }
+}
+
