--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,9 +432,10 @@ nav {
 .cards_developers_container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     margin-top: 10px;
-    margin-bottom: 30px;
+    gap: 50px;
+    flex-wrap: wrap;
 }
 
 .card_developer {
